@@ -1,22 +1,18 @@
 *Items on this list may be work in progress*
 
-==Version 0.8==
-
-  * Create a MultiOrganizer that can use other organizers
-  * Create an XML parser to parse configuration of the MultiOrganizer 
-  * Create a XesamFileListFilter
-  * Write a MusicOrganizer with clasification by artist, album, genre, etc and that presents the filenames following a pattern
-
-
 ==Version 1.0==
 
+  * Create a XesamFileListFilter
   * Cleanup code
   * gettext support
   * Write documentation 
 
 
-==Future plans (maybe a different project)==
+==Future plans==
 
+  * Create a MultiOrganizer that can use other organizers
+  * Create an XML parser to parse configuration of the MultiOrganizer 
+  * Write a MusicOrganizer with clasification by artist, album, genre, etc and that presents the filenames following a pattern
   * Write an ApplicationsOrganizer along with an ApplicationsFileListProvider for rpm to show every installed application as one executable file and to let the user drop an rpm file on that folder to install and delete that file to uninstall
   * Define PackageManagerPlugin API for the ApplicationsHandler
   * Extract RedhatPackageManagerPlugin
